unpackaged/main/default/objects/conference360__Blackthorn_Events_Whitelisted_Domains__c/conference360__Blackthorn_Events_Whitelisted_Domains__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Blackthorn Events Whitelisted Domains</label>
</CustomObject>