unpackaged/main/default/objects/conference360__Blackthorn_Events_Whitelisted_Domains__c/fields/conference360__Domain__c.field-meta.xml
<CustomField>
    <fullName>conference360__Domain__c</fullName>
    <description>Domain URL to whitelist</description>
    <inlineHelpText>Domain URL to whitelist</inlineHelpText>
    <label>Domain</label>
    <type>Url</type>
</CustomField>