unpackaged/main/default/objects/conference360__Blackthorn_Events_Whitelisted_Domains__c/fields/conference360__Third_Party_Domain__c.field-meta.xml
<CustomField>
    <fullName>conference360__Third_Party_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party Domain</label>
    <type>Checkbox</type>
</CustomField>