unpackaged/main/default/objects/conference360__Blackthorn_Events_Whitelisted_Domains__c/fields/conference360__Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Type__c</fullName>
    <label>Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>